Create and style the article data section

--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -19,6 +19,12 @@ $weather: #ffc000
     -o-border-radius: $radius
 
 /****************************
+  Global Styles
+  ****************************/
+body
+  background-color: #494949
+
+/****************************
   Nav Styles
   ****************************/
 nav
@@ -86,3 +92,43 @@ nav
 /****************************
   Article Styles
   ****************************/
+
+article
+  background: #fafafa
+  margin: 0 auto
+  position: relative
+  top: 40px
+  width: 950px
+  padding: 20px 30px 30px 30px
+  font-family: Arial, sans-serif
+
+#article-header
+  font-size: 12px
+  line-height: 14px
+  letter-spacing: 0px
+  #headline
+    font-size: 32px
+    line-height: 34px
+    color: #333
+    font-family: Helvetica, sans-serif
+    font-weight: bold
+  #publish-data
+    border: 1px solid #e6e6e6
+    border-radius: 3px
+    margin: 20px 0 23px 0
+    padding: 10px
+    #author
+      display: inline
+      color: #1a95d2
+      font-weight: bold
+      cursor: pointer
+    #article-org
+      display: inline
+      font-weight: bold
+      padding-right: 20px
+    #pub-date
+      display: inline
+      color: #999999
+    #updated-date
+      display: inline
+      color: #999999
