--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,11 @@
 /****************************
+ * Global Styles
+ * ****************************/
+body {
+  background-color: #494949;
+}
+
+/****************************
  * Nav Styles
  * ****************************/
 nav {
@@ -86,5 +93,52 @@ nav ul .search {
 /****************************
  * Article Styles
  * ****************************/
+article {
+  background: #fafafa;
+  margin: 0 auto;
+  position: relative;
+  top: 40px;
+  width: 950px;
+  padding: 20px 30px 30px 30px;
+  font-family: Arial, sans-serif;
+}
+
+#article-header {
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0px;
+}
+#article-header #headline {
+  font-size: 32px;
+  line-height: 34px;
+  color: #333;
+  font-family: Helvetica, sans-serif;
+  font-weight: bold;
+}
+#article-header #publish-data {
+  border: 1px solid #e6e6e6;
+  border-radius: 3px;
+  margin: 20px 0 23px 0;
+  padding: 10px;
+}
+#article-header #publish-data #author {
+  display: inline;
+  color: #1a95d2;
+  font-weight: bold;
+  cursor: pointer;
+}
+#article-header #publish-data #article-org {
+  display: inline;
+  font-weight: bold;
+  padding-right: 20px;
+}
+#article-header #publish-data #pub-date {
+  display: inline;
+  color: #999999;
+}
+#article-header #publish-data #updated-date {
+  display: inline;
+  color: #999999;
+}
 
 /*# sourceMappingURL=styles.css.map */
