--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -117,6 +117,45 @@ nav
       &:hover
         background: #eee */
 
+/****************************
+  Social Sidebar Styles
+  ****************************/
+#social-sidebar
+  list-style: none
+  position: fixed
+  height: 100%
+  background: #dadcde
+  box-shadow: inset -2px 0 4px -1px rgba(0,0,0,.2)
+  width: 40px
+  top: 0
+  padding-top: 120px
+  margin: 0 auto
+  left: calc(50% - 475px - 40px)
+  ul
+    list-style: none
+    padding-left: 0
+    li
+      text-align: center
+      padding: 11px 0
+      border-top: 1px solid #bdbdbd
+      cursor: pointer
+      &:hover
+        background-color: #E8E8E8
+      &:last-child
+        border-bottom: 1px solid #bdbdbd
+      &.print
+      img
+        height: 18px
+  ul.print
+    height: 100%
+    .space
+      height: calc(100% - 300px)
+      border-top: 0px solid #bdbdbd
+      &:hover
+        background-color: #dadcde
+        cursor: auto
+
+
 
 
 
