--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,7 +21,7 @@ html, body {
   position: fixed;
   margin: 0 auto;
   left: 50%;
-  top: 90px;
+  top: 210px;
   margin-left: -600px;
 }
 
@@ -32,23 +32,62 @@ nav {
   background: #fff;
   border-top: 1px solid #d2d2d2;
   box-shadow: 0 1px 0 #d2d2d2;
-  height: 39px;
-  position: fixed;
+  position: absolute;
   width: 100%;
   z-index: 9999999999999;
 }
+nav #masthead {
+  width: 1080px;
+  margin-left: auto;
+  margin-right: auto;
+}
+nav #masthead h4 {
+  display: inline-block;
+  font-family: "Montserrat", sans-serif;
+  font-size: 13px;
+  line-height: 15px;
+  color: #141414;
+  font-weight: 400;
+  position: absolute;
+  padding-top: 30px;
+  right: calc(50% - 600px);
+}
+nav #masthead h4 span {
+  text-transform: uppercase;
+  font-size: 16px;
+  color: #00a0f8;
+  font-weight: bold;
+}
+nav #masthead img {
+  height: 80px;
+  width: auto;
+}
+@media only screen and (min-width: 1250px) {
+  nav #masthead {
+    width: 1180px;
+  }
+}
 nav ul {
+  padding-left: 0;
+  position: relative;
+  top: -2px;
+  height: 39px;
   margin: 0 auto;
   list-style: none;
-  width: 1080px;
   margin-left: auto;
   margin-right: auto;
   font-size: 0;
 }
+nav ul#first {
+  width: 1080px;
+}
 @media only screen and (min-width: 1250px) {
-  nav ul {
+  nav ul#first {
     width: 1180px;
   }
+}
+nav ul#second {
+  display: inline !important;
 }
 nav ul li {
   display: inline;
@@ -60,7 +99,7 @@ nav ul li {
   font-size: 11px;
   line-height: 40px;
   letter-spacing: 0px;
-  font-weight: bold;
+  font-weight: 700;
 }
 nav ul .nav-logo img {
   width: 152px;
@@ -128,6 +167,7 @@ nav ul .search {
   padding-top: 120px;
   margin: 0 auto;
   left: calc(50% - 475px - 40px);
+  top: 120px;
 }
 #social-sidebar ul {
   list-style: none;
@@ -167,7 +207,7 @@ article {
   background: #fafafa;
   margin: 0 auto;
   position: relative;
-  top: 40px;
+  top: 120px;
   width: 950px;
   padding: 20px 30px 30px 30px;
   font-family: Arial, sans-serif;
