--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,12 +36,17 @@ nav {
   width: 100%;
   z-index: 9999999999999;
 }
+nav #nav-wrapper {
+  border-top: 1px solid #d2d2d2;
+  padding-top: 3px;
+}
 nav #masthead {
   width: 1080px;
   margin-left: auto;
   margin-right: auto;
 }
 nav #masthead h4 {
+  cursor: pointer;
   display: inline-block;
   font-family: "Montserrat", sans-serif;
   font-size: 13px;
@@ -77,12 +82,10 @@ nav ul {
   margin-left: auto;
   margin-right: auto;
   font-size: 0;
-}
-nav ul#first {
   width: 1080px;
 }
 @media only screen and (min-width: 1250px) {
-  nav ul#first {
+  nav ul {
     width: 1180px;
   }
 }
@@ -96,7 +99,7 @@ nav ul li {
   margin: 0 !important;
   font-family: "Montserrat", sans-serif;
   text-transform: uppercase;
-  font-size: 11px;
+  font-size: 10px;
   line-height: 40px;
   letter-spacing: 0px;
   font-weight: 700;
@@ -147,7 +150,7 @@ nav ul .weather {
   border-top-color: #ffc000;
 }
 nav ul .search {
-  padding-left: 111px;
+  padding-left: 80px;
 }
 
 /*    .icon
