Convert to paramaterized data

--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -83,6 +83,7 @@ nav
     border-top: 1px solid $gray
     padding-top: 0px
     margin-top: -1px
+    padding-top: 2px
   #masthead
     width: 1080px
     margin-left: auto
@@ -95,10 +96,11 @@ nav
       font-size: 13px
       line-height: 15px
       color: #141414
-      font-weight: 400
+      font-weight: 500
       position: absolute
       padding-top: 30px
       right: calc(50% - 600px)
+      text-align: center
       span
         text-transform: uppercase
         font-size: 16px
@@ -134,7 +136,7 @@ nav
       font-size: 10px
       line-height: 40px
       letter-spacing: 0px
-      font-weight: 700
+      font-weight: 900
     .nav-logo
       img
         width: 152px
