--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -69,6 +69,7 @@ nav #nav-wrapper {
   border-top: 1px solid #d2d2d2;
   padding-top: 0px;
   margin-top: -1px;
+  padding-top: 2px;
 }
 nav #masthead {
   width: 1080px;
@@ -83,10 +84,11 @@ nav #masthead h4 {
   font-size: 13px;
   line-height: 15px;
   color: #141414;
-  font-weight: 400;
+  font-weight: 500;
   position: absolute;
   padding-top: 30px;
   right: calc(50% - 600px);
+  text-align: center;
 }
 nav #masthead h4 span {
   text-transform: uppercase;
@@ -133,7 +135,7 @@ nav ul li {
   font-size: 10px;
   line-height: 40px;
   letter-spacing: 0px;
-  font-weight: 700;
+  font-weight: 900;
 }
 nav ul .nav-logo img {
   width: 152px;
