--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -206,6 +206,9 @@ nav
     .subscribe
       color: #fff
       background: #029BFF
+      padding-top: 10px
+    .sign-in
+      border-width: 0px
 
 
 /****************************
