--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -375,3 +375,10 @@ article
   line-height: 22px
   letter-spacing: 0px
   color: #333
+
+/****************************
+  Article EYP
+  ****************************/
+#eyp.false
+  display: none
+  
