--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -40,6 +40,7 @@ body
   background-color: #494949
   text-rendering: geometricPrecision
   -webkit-font-smoothing: antialiased
+  overflow-x: hidden
 
 html, body
   height: 100%
@@ -91,6 +92,7 @@ body.tennessean ul.usa-today
     top: 200px
   #nav-wrapper
     padding-top: 0px
+    overflow: hidden
 .masthead.tennessean
   nav ul
     top: -2px
@@ -337,6 +339,13 @@ article
       position: relative
       vertical-align: middle
       top: -2px
+  ul
+    padding: 0 40px
+  @media only screen and (max-width: 600px)
+    margin: auto
+    float: none
+    text-align: center
+    display: block
 
 #article-social.bottom
   ul
@@ -364,6 +373,12 @@ article
     line-height: 16px
     color: #646464
     padding-top: 6px
+  @media only screen and (max-width: 600px)
+    margin: auto
+    float: none
+    text-align: center
+    display: block
+
 
 #article-text
   font: 14px/22px arial,sans-serif
@@ -372,3 +387,32 @@ article
   line-height: 22px
   letter-spacing: 0px
   color: #333
+
+/****************************
+  Reponsive Stuff
+  ****************************/
+.col-sm-8
+  max-width: 98vw
+  @media only screen and (max-width: 900px)
+    flex: 1
+
+.sidebar
+  @media only screen and (max-width: 900px)
+    min-width: 100%
+  h1
+    font-size: 17px
+    line-height: 24px
+    padding-left: 15px
+    border-left: 7px solid #009bff
+    font-family: Helvetica, sans-serif
+    font-weight: bold
+    .link
+      transition: 0.2s
+      cursor: pointer
+      color: #0af
+      text-decoration: none
+      &:hover
+        color: #1a95d2
+
+article
+  max-width: 100vw
