--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -66,7 +66,7 @@ body.tennessean ul.usa-today {
   top: 200px;
 }
 .masthead #nav-wrapper {
-  padding-top: 0px;
+  padding-top: 1px;
   overflow: hidden;
 }
 
@@ -76,17 +76,20 @@ body.tennessean ul.usa-today {
 
 nav {
   background: #fff;
-  border-top: 1px solid #d2d2d2;
   box-shadow: 0 1px 0 #d2d2d2;
   position: fixed;
   width: 100%;
   z-index: 9999999999999;
 }
 nav #nav-wrapper {
+  padding-top: 0px;
+  padding-top: 0px;
+}
+nav #nav-wrapper:before {
+  content: "";
+  display: block;
+  line-height: 1px;
   border-top: 1px solid #d2d2d2;
-  padding-top: 0px;
-  margin-top: -2px;
-  padding-top: 0px;
 }
 nav #masthead {
   width: 1080px;
