--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -91,7 +91,7 @@ body.tennessean ul.usa-today
     position: absolute
     top: 200px
   #nav-wrapper
-    padding-top: 0px
+    padding-top: 1px
     overflow: hidden
 .masthead.tennessean
   nav ul
@@ -99,16 +99,18 @@ body.tennessean ul.usa-today
 
 nav
   background: #fff
-  border-top: 1px solid $gray
   box-shadow: 0 1px 0 rgba(210,210,210,1)
   position: fixed
   width: 100%
   z-index: 9999999999999
   #nav-wrapper
-    border-top: 1px solid $gray
     padding-top: 0px
-    margin-top: -2px
     padding-top: 0px
+    &:before
+      content: ""
+      display: block
+      line-height: 1px
+      border-top: 1px solid $gray
   #masthead
     width: 1080px
     margin-left: auto
