--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -30,6 +30,11 @@ html, body {
   top: 120px;
   margin-left: -600px;
 }
+@media only screen and (max-width: 950px) {
+  #black-bars {
+    display: none;
+  }
+}
 
 body.usa-today ul.tennessean {
   display: none;
@@ -81,6 +86,11 @@ nav {
   width: 100%;
   z-index: 9999999999999;
 }
+@media only screen and (max-width: 950px) {
+  nav {
+    position: absolute;
+  }
+}
 nav #nav-wrapper {
   padding-top: 0px;
   padding-top: 0px;
@@ -97,6 +107,12 @@ nav #masthead {
   margin-right: auto;
   display: none;
 }
+@media only screen and (max-width: 1080px) {
+  nav #masthead {
+    width: 100%;
+    padding-left: 15px;
+  }
+}
 nav #masthead h4 {
   cursor: pointer;
   display: inline-block;
@@ -110,6 +126,11 @@ nav #masthead h4 {
   right: calc(50% - 600px);
   text-align: center;
 }
+@media only screen and (max-width: 950px) {
+  nav #masthead h4 {
+    display: none;
+  }
+}
 nav #masthead h4 span {
   text-transform: uppercase;
   font-size: 16px;
@@ -119,6 +140,7 @@ nav #masthead h4 span {
 nav #masthead img {
   height: 80px;
   width: auto;
+  cursor: pointer;
 }
 @media only screen and (min-width: 1250px) {
   nav #masthead {
@@ -244,6 +266,11 @@ nav ul .sign-in {
   padding-top: 120px;
   margin: 0 auto;
   left: calc(50% - 475px - 40px);
+}
+@media only screen and (max-width: 950px) {
+  #social-sidebar {
+    display: none;
+  }
 }
 #social-sidebar ul {
   list-style: none;
