--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -316,6 +316,10 @@ article {
   padding: 20px 30px 30px 30px;
   font-family: Arial, sans-serif;
 }
+article .link {
+  cursor: pointer;
+  color: #1990e5;
+}
 
 /****************************
  * Article Header
@@ -500,7 +504,18 @@ article {
 /****************************
  *  Article EYP
  *  ****************************/
- * #eyp.false
- *  display: none */
+#eyp.false {
+  display: none;
+}
+
+#eyp {
+  border: 2px dashed #e6e6e6;
+  border-radius: 3px;
+  padding: 15px 15px 0 15px;
+}
+#eyp h4 {
+  font-size: 16px;
+  font-weight: bold;
+}
 
 /*# sourceMappingURL=styles.css.map */
