--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -282,7 +282,9 @@ article
   width: 950px
   padding: 20px 30px 30px 30px
   font-family: Arial, sans-serif
-
+  .link
+    cursor: pointer
+    color: #1990e5
 /****************************
   Article Header
   ****************************/
@@ -435,5 +437,13 @@ article
 /****************************
     Article EYP
     ****************************/
-  #eyp.false
-    display: none
+#eyp.false
+  display: none
+
+#eyp
+  border: 2px dashed #e6e6e6
+  border-radius: 3px
+  padding: 15px 15px 0 15px
+  h4
+    font-size: 16px
+    font-weight: bold
