Tweak the EYP styles a bit based on feedback

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -509,12 +509,14 @@ article {
 }
 
 #eyp {
-  border: 2px dashed #e6e6e6;
+  font-size: 14px;
+  background: #badef7;
+  color: #000;
   border-radius: 3px;
-  padding: 15px 15px 0 15px;
+  padding: 15px;
 }
 #eyp h4 {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
 }
 
