Add a few more styles based on feedback

--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -445,7 +445,8 @@ article
   background: #badef7
   color: #000
   border-radius: 3px
-  padding: 15px
+  padding: 15px 15px 1px 15px
+  border-left: 3px solid #1990e5
   h4
     font-size: 14px
     font-weight: bold
