--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -513,7 +513,8 @@ article {
   background: #badef7;
   color: #000;
   border-radius: 3px;
-  padding: 15px;
+  padding: 15px 15px 1px 15px;
+  border-left: 3px solid #1990e5;
 }
 #eyp h4 {
   font-size: 14px;
