--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -133,9 +133,9 @@ nav
       font-weight: 500
       position: absolute
       padding-top: 30px
-      right: calc(50% - 600px)
+      left: calc(73%)
       text-align: center
-      @media only screen and (max-width: 950px)
+      @media only screen and (max-width: 768px)
         display: none
       span
         text-transform: uppercase
@@ -158,7 +158,7 @@ nav
     margin-left: auto
     margin-right: auto
     font-size: 0
-    width: 1080px
+    width: 1050px
     @media only screen and (min-width: 1250px)
       width: 1180px
     &#second
@@ -212,7 +212,9 @@ nav
     .music, .civility, .politics, .obituaries
       border-top-color: $music
     .search
-      padding-left: 80px
+      padding-left: 10px
+      @media only screen and (min-width: 1250px)
+        padding-left: 80px
     .subscribe, .sign-in
       font-size: 14px
       font-family: sans-serif
