--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -284,6 +284,10 @@ article
   width: 950px
   padding: 20px 30px 30px 30px
   font-family: Arial, sans-serif
+  @media only screen and (max-width: 1080px)
+    padding: 20px 15px 30px 15px
+    .container-fluid
+      padding: 0
   .link
     cursor: pointer
     color: #1990e5
